Fix css droplist z-index

--- a/resources/js/components/drop-menu/dropMenu.style.css
+++ b/resources/js/components/drop-menu/dropMenu.style.css
@@ -11,6 +11,7 @@
     border-radius: 8px;
     background-color: var(--color-bg);
     box-shadow: 0 8px 24px 0 rgba(0, 0, 0, 0.2);
+    z-index: 99;
 }
 .drop-list__item {
     font-family: "inter";
